unpackaged/main/default/objects/Case/fields/Accountt__c.field-meta.xml
<CustomField>
    <fullName>Accountt__c</fullName>
    <label>Account</label>
    <length>70</length>
    <type>Text</type>
</CustomField>