unpackaged/main/default/objects/Case/fields/Client_Contacted_Date__c.field-meta.xml
<CustomField>
    <fullName>Client_Contacted_Date__c</fullName>
    <inlineHelpText>The date the client was first followed up with.</inlineHelpText>
    <label>Client Contacted Date</label>
    <type>Date</type>
</CustomField>