unpackaged/main/default/objects/Case/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <label>Client Contact Email</label>
    <type>Email</type>
</CustomField>