unpackaged/main/default/objects/Case/fields/Days_Left_on_Deferment__c.field-meta.xml
<CustomField>
    <fullName>Days_Left_on_Deferment__c</fullName>
    <label>Days Left on Deferment</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>