unpackaged/main/default/objects/Case/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <inlineHelpText>The department to which the survey pertained.</inlineHelpText>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>20 Groups</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>NCMi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>