unpackaged/main/default/objects/Case/fields/Engagement_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement Attendee</label>
    <referenceTo>Engagement_Attendee__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>