unpackaged/main/default/objects/Case/fields/Last_Time_Credit_Filed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Time_Credit_Filed_Date__c</fullName>
    <label>Last Time Credit Filed Date</label>
    <type>Date</type>
</CustomField>