unpackaged/main/default/objects/Case/fields/Moderator_Consultant_Instructor__c.field-meta.xml
<CustomField>
    <fullName>Moderator_Consultant_Instructor__c</fullName>
    <label>NCM Associate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bob Sloan</fullName>
            </value>
            <value>
                <fullName>Brain Faulkenberry</fullName>
            </value>
            <value>
                <fullName>Brent Carmichael</fullName>
            </value>
            <value>
                <fullName>Chris Kahrs</fullName>
            </value>
            <value>
                <fullName>Don Rothrauff</fullName>
            </value>
            <value>
                <fullName>Dustin Kerr</fullName>
            </value>
            <value>
                <fullName>George Gowen</fullName>
            </value>
            <value>
                <fullName>Jeff Lampton</fullName>
            </value>
            <value>
                <fullName>Jerry Powers</fullName>
            </value>
            <value>
                <fullName>Joe Basil</fullName>
            </value>
            <value>
                <fullName>John Gilbert</fullName>
            </value>
            <value>
                <fullName>Ken Runnells</fullName>
            </value>
            <value>
                <fullName>Kevin Cunningham</fullName>
            </value>
            <value>
                <fullName>Kirk Felix</fullName>
            </value>
            <value>
                <fullName>Lee Michaelson</fullName>
            </value>
            <value>
                <fullName>Leo Hart</fullName>
            </value>
            <value>
                <fullName>Lycia Jedlicki</fullName>
            </value>
            <value>
                <fullName>Mark Shackelford</fullName>
            </value>
            <value>
                <fullName>Richard Ackman</fullName>
            </value>
            <value>
                <fullName>Rick Wegley</fullName>
            </value>
            <value>
                <fullName>Robert Neuman</fullName>
            </value>
            <value>
                <fullName>Robin Cunningham</fullName>
            </value>
            <value>
                <fullName>Ron Caruso</fullName>
            </value>
            <value>
                <fullName>Steve Emery</fullName>
            </value>
            <value>
                <fullName>Steve Hall</fullName>
            </value>
            <value>
                <fullName>Steve Kain</fullName>
            </value>
            <value>
                <fullName>Terry Wichmann</fullName>
            </value>
            <value>
                <fullName>Tony Albertson</fullName>
            </value>
            <value>
                <fullName>Wayne George</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>