unpackaged/main/default/objects/Case/fields/Overdue__c.field-meta.xml
<CustomField>
    <fullName>Overdue__c</fullName>
    <description>Indicates if the Due Date has passed.</description>
    <formula>IF( ISBLANK(Due_Date__c), &quot;&quot;, 
  IF( TODAY() &gt;  Due_Date__c , 
    IMAGE(&quot;https://ncm.lightning.force.com/img/samples/flag_red.gif&quot;, &quot;RED&quot;), 
    IMAGE(&quot;https://ncm.lightning.force.com/img/samples/flag_green.gif&quot;, &quot;GREEN&quot;)
  )
)</formula>
    <inlineHelpText>Indicates if the Due Date has passed.</inlineHelpText>
    <label>Overdue</label>
    <type>Text</type>
</CustomField>