unpackaged/main/default/objects/Case/fields/Project_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Project_Timeline__c</fullName>
    <label>Project Timeline</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>Long-term</fullName>
            </value>
            <value>
                <fullName>Short-Term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>