unpackaged/main/default/objects/Case/fields/Reason_Client_Requested_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Reason_Client_Requested_Follow_Up__c</fullName>
    <label>Reason Client Requested Follow Up</label>
    <type>TextArea</type>
</CustomField>