unpackaged/main/default/objects/Case/fields/Request_to_Support__c.field-meta.xml
<CustomField>
    <fullName>Request_to_Support__c</fullName>
    <label>Request to Support</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>20 Groups</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>axcessa</fullName>
            </value>
            <value>
                <fullName>Data Processing</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Executive Team</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>NCM Institute</fullName>
            </value>
            <value>
                <fullName>NCM OnDemand</fullName>
            </value>
            <value>
                <fullName>Retail Ops</fullName>
            </value>
            <value>
                <fullName>Travel Solutions</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>