unpackaged/main/default/objects/Case/fields/Survey_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Survey_Sent_Date__c</fullName>
    <inlineHelpText>Date at which the survey resulting in this case was sent to the client.</inlineHelpText>
    <label>Survey Sent Date</label>
    <type>Date</type>
</CustomField>