unpackaged/main/default/objects/Case/fields/Time_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Complete__c</fullName>
    <label>Time to Complete</label>
    <length>100</length>
    <type>Text</type>
</CustomField>