unpackaged/main/default/objects/Case/recordTypes/Credit_on_File.recordType-meta.xml
<RecordType>
    <fullName>Credit_on_File</fullName>
    <active>true</active>
    <businessProcess>Credit on File</businessProcess>
    <description>Engagement Attendees credit on file cases</description>
    <label>Credit on File</label>
</RecordType>