unpackaged/main/default/objects/Case/recordTypes/Original_Case.recordType-meta.xml
<RecordType>
    <fullName>Original_Case</fullName>
    <active>true</active>
    <businessProcess>Original Support Process</businessProcess>
    <label>Original Case</label>
</RecordType>