unpackaged/main/default/objects/Case/recordTypes/Survey_Cases.recordType-meta.xml
<RecordType>
    <fullName>Survey_Cases</fullName>
    <active>true</active>
    <businessProcess>Survey to Case Support Process</businessProcess>
    <description>These cases are created due to Survey Result Indications.</description>
    <label>Survey Cases</label>
</RecordType>