unpackaged/main/default/objects/Case/validationRules/Time_to_Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Time_to_Complete</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status, &quot;Closed&quot;),
 ISBLANK( Time_to_Complete__c ) 
)</errorConditionFormula>
    <errorDisplayField>Time_to_Complete__c</errorDisplayField>
    <errorMessage>Please enter the number of hours and minutes as a decimal - ex: 3.25 equals 3 hours and quarter hours or 3 hours and 15 minutes.</errorMessage>
</ValidationRule>