unpackaged/main/default/objects/Case/listViews/Credit_on_File_Case.listView-meta.xml
<ListView>
    <fullName>Credit_on_File_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Credit on File</label>
    <queue>Credit_on_File</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>